# research_work

./: CMakeLists.txt  README.md  build.bat  build.sh  main.cpp  run_all.bat  run_single.bat  run_single.sh
python_scripts/: run_tracking.py  tracking_params_generator.py
test_data/cos/: noised_data.csv
test_data/cos/reference/: references.csv
tracking_lib/: CMakeLists.txt
tracking_lib/include/: XML_Configurator.h  extrapolator.h  extrapolator_factory.h  factory_creator.h  filter.h  filter_factory.h  identifier.h  identifier_checker.h  identifier_factory.h  initializer.h  initializer_factory.h  pugi_tools.h  structions.h  tools.h  tracking.h  tracking_object.h  tracking_object_factory.h  wrapped_factory.h
tracking_lib/src/: XML_Configurator.cpp  extrapolator.cpp  extrapolator_factory.cpp  filter.cpp  filter_factory.cpp  identifier.cpp  identifier_checker.cpp  identifier_factory.cpp  identifier_factory_creator.cpp  initializer.cpp  initializer_factory.cpp  pugi_tools.cpp  tracking.cpp  tracking_object.cpp  tracking_object_factory.cpp
